screw on the top plate added

--- a/trail.txt.4
+++ b/trail.txt.4
@@ -1331,3 +1331,6 @@ ll_check` 0
 !%CIExécution de la passe 1 sur 2.
 !%CIExécution de la passe 2 sur 2.
 !%CILe fichier PDF a été créé.
+~ Activate `main_dlg_cur` `main_dlg_cur`
+!mem_use INCREASE Blocks 1824653, AppSize 341783026, SysSize 381038928
+~ Minimize `main_dlg_cur` `main_dlg_cur`
