--- a/trail.txt.3
+++ b/trail.txt.3
@@ -22180,3 +22180,380 @@ ll_check` 0
 ~ MButtonDisarm `main_dlg_cur` `proe_win` 9 323 312 0 0 1187 631 1536 864 1751389
 ~ Trail `UI Desktop` `UI Desktop` `PREVIEW_POPUP_TIMER` \
  `main_dlg_w1:PHTLeft.AssyTree:<NULL>`
+~ LButtonArm `main_dlg_cur` `proe_win` 9 914 432 0 1 1187 631 1536 864 1798604
+~ Activate `main_dlg_cur` `main_dlg_cur`
+~ Move `main_dlg_cur` `proe_win` 9 914 432 0 1 1187 631 1536 864 1798615
+~ LButtonDisarm `main_dlg_cur` `proe_win` 9 914 432 0 0 1187 631 1536 864 1798693
+@ sel view 0
+ -1.086518 -0.321056 -0.391070 -0.402005 1.110289 0.205389
+ 0.307253 0.317358 -1.114187 296.288035 427.826340 -616.398209 0.800000 0.000000 0
+~ MButtonArm `main_dlg_cur` `proe_win` 9 602 349 0 2 1187 631 1536 864 1799190
+~ Move `main_dlg_cur` `proe_win` 9 599 348 0 1538 1187 631 1536 864 1799196
+~ Move `main_dlg_cur` `proe_win` 9 596 348 0 514 1187 631 1536 864 1799204
+~ Move `main_dlg_cur` `proe_win` 9 595 348 0 514 1187 631 1536 864 1799460
+~ Move `main_dlg_cur` `proe_win` 9 585 354 0 1538 1187 631 1536 864 1799548
+~ Move `main_dlg_cur` `proe_win` 9 560 361 0 1538 1187 631 1536 864 1799648
+~ Move `main_dlg_cur` `proe_win` 9 556 362 0 1538 1187 631 1536 864 1799742
+~ Move `main_dlg_cur` `proe_win` 9 555 363 0 1538 1187 631 1536 864 1800060
+~ Move `main_dlg_cur` `proe_win` 9 508 370 0 1538 1187 631 1536 864 1800147
+~ Move `main_dlg_cur` `proe_win` 9 470 374 0 1538 1187 631 1536 864 1800233
+~ Move `main_dlg_cur` `proe_win` 9 463 375 0 1538 1187 631 1536 864 1800318
+~ Move `main_dlg_cur` `proe_win` 9 458 377 0 1538 1187 631 1536 864 1800403
+~ Move `main_dlg_cur` `proe_win` 9 453 379 0 1538 1187 631 1536 864 1800487
+~ Move `main_dlg_cur` `proe_win` 9 449 382 0 1538 1187 631 1536 864 1800574
+~ Move `main_dlg_cur` `proe_win` 9 445 386 0 1538 1187 631 1536 864 1800660
+~ Move `main_dlg_cur` `proe_win` 9 447 393 0 1538 1187 631 1536 864 1800751
+~ Move `main_dlg_cur` `proe_win` 9 453 404 0 1538 1187 631 1536 864 1800844
+~ Move `main_dlg_cur` `proe_win` 9 458 409 0 1538 1187 631 1536 864 1800937
+~ Move `main_dlg_cur` `proe_win` 9 460 410 0 1538 1187 631 1536 864 1801031
+~ Move `main_dlg_cur` `proe_win` 9 470 411 0 1538 1187 631 1536 864 1801124
+~ Move `main_dlg_cur` `proe_win` 9 471 410 0 1538 1187 631 1536 864 1801252
+~ Move `main_dlg_cur` `proe_win` 9 473 407 0 1538 1187 631 1536 864 1801349
+~ Move `main_dlg_cur` `proe_win` 9 475 404 0 1538 1187 631 1536 864 1801444
+~ Move `main_dlg_cur` `proe_win` 9 476 403 0 1538 1187 631 1536 864 1801579
+~ Move `main_dlg_cur` `proe_win` 9 476 401 0 1026 1187 631 1536 864 1801674
+~ Move `main_dlg_cur` `proe_win` 9 478 397 0 1538 1187 631 1536 864 1801762
+~ Move `main_dlg_cur` `proe_win` 9 480 391 0 1538 1187 631 1536 864 1801850
+~ Move `main_dlg_cur` `proe_win` 9 482 385 0 1538 1187 631 1536 864 1801946
+~ MButtonDisarm `main_dlg_cur` `proe_win` 9 482 385 0 0 1187 631 1536 864 1802031
+~ MButtonArm `main_dlg_cur` `proe_win` 9 889 213 0 2 1187 631 1536 864 1802189
+~ Move `main_dlg_cur` `proe_win` 9 890 212 0 1538 1187 631 1536 864 1802196
+~ Move `main_dlg_cur` `proe_win` 9 889 213 0 1538 1187 631 1536 864 1802203
+~ Move `main_dlg_cur` `proe_win` 9 890 213 0 514 1187 631 1536 864 1802211
+~ Move `main_dlg_cur` `proe_win` 9 888 213 0 514 1187 631 1536 864 1802219
+~ Move `main_dlg_cur` `proe_win` 9 886 213 0 514 1187 631 1536 864 1802227
+~ Move `main_dlg_cur` `proe_win` 9 883 213 0 514 1187 631 1536 864 1802235
+~ Move `main_dlg_cur` `proe_win` 9 876 214 0 1538 1187 631 1536 864 1802257
+~ Move `main_dlg_cur` `proe_win` 9 848 214 0 514 1187 631 1536 864 1802353
+~ Move `main_dlg_cur` `proe_win` 9 847 215 0 1538 1187 631 1536 864 1802683
+~ Move `main_dlg_cur` `proe_win` 9 846 219 0 1538 1187 631 1536 864 1802783
+~ Move `main_dlg_cur` `proe_win` 9 846 222 0 1026 1187 631 1536 864 1802875
+~ Move `main_dlg_cur` `proe_win` 9 846 224 0 1026 1187 631 1536 864 1802968
+~ Move `main_dlg_cur` `proe_win` 9 845 227 0 1538 1187 631 1536 864 1803053
+~ Move `main_dlg_cur` `proe_win` 9 845 229 0 1026 1187 631 1536 864 1803151
+~ Move `main_dlg_cur` `proe_win` 9 845 228 0 1026 1187 631 1536 864 1803315
+~ Move `main_dlg_cur` `proe_win` 9 849 226 0 1538 1187 631 1536 864 1803400
+~ Move `main_dlg_cur` `proe_win` 9 853 224 0 1538 1187 631 1536 864 1803486
+~ Move `main_dlg_cur` `proe_win` 9 855 222 0 1538 1187 631 1536 864 1803574
+~ Move `main_dlg_cur` `proe_win` 9 856 222 0 514 1187 631 1536 864 1803670
+~ Move `main_dlg_cur` `proe_win` 9 856 221 0 1026 1187 631 1536 864 1803768
+~ Move `main_dlg_cur` `proe_win` 9 857 221 0 514 1187 631 1536 864 1803859
+~ MButtonDisarm `main_dlg_cur` `proe_win` 9 857 221 0 0 1187 631 1536 864 1804116
+~ Wheel `main_dlg_cur` `proe_win` 9 857 221 458752 0 1187 631 1536 864 1804310
+~ Wheel `main_dlg_cur` `proe_win` 9 857 221 458752 0 1187 631 1536 864 1804388
+~ Wheel `main_dlg_cur` `proe_win` 9 857 221 458752 0 1187 631 1536 864 1804452
+~ Wheel `main_dlg_cur` `proe_win` 9 865 213 393216 1536 1187 631 1536 864 1804941
+~ Wheel `main_dlg_cur` `proe_win` 9 865 213 393216 0 1187 631 1536 864 1805011
+~ MButtonArm `main_dlg_cur` `proe_win` 9 869 210 0 514 1187 631 1536 864 1805316
+~ Move `main_dlg_cur` `proe_win` 9 870 210 0 514 1187 631 1536 864 1805324
+~ Move `main_dlg_cur` `proe_win` 9 871 210 0 514 1187 631 1536 864 1805331
+~ Move `main_dlg_cur` `proe_win` 9 872 210 0 514 1187 631 1536 864 1805339
+~ Move `main_dlg_cur` `proe_win` 9 873 210 0 514 1187 631 1536 864 1805355
+~ Move `main_dlg_cur` `proe_win` 9 875 210 0 514 1187 631 1536 864 1805363
+~ Move `main_dlg_cur` `proe_win` 9 877 210 0 514 1187 631 1536 864 1805384
+~ Move `main_dlg_cur` `proe_win` 9 881 208 0 1538 1187 631 1536 864 1805471
+~ Move `main_dlg_cur` `proe_win` 9 882 208 0 514 1187 631 1536 864 1805707
+~ Move `main_dlg_cur` `proe_win` 9 882 209 0 1026 1187 631 1536 864 1806067
+~ Move `main_dlg_cur` `proe_win` 9 883 210 0 1538 1187 631 1536 864 1806151
+~ Move `main_dlg_cur` `proe_win` 9 884 210 0 514 1187 631 1536 864 1806307
+~ Move `main_dlg_cur` `proe_win` 9 890 210 0 514 1187 631 1536 864 1806398
+~ Move `main_dlg_cur` `proe_win` 9 892 210 0 514 1187 631 1536 864 1806491
+~ Move `main_dlg_cur` `proe_win` 9 893 209 0 1538 1187 631 1536 864 1806588
+~ Move `main_dlg_cur` `proe_win` 9 892 209 0 514 1187 631 1536 864 1806819
+~ Move `main_dlg_cur` `proe_win` 9 883 211 0 1538 1187 631 1536 864 1806910
+~ Move `main_dlg_cur` `proe_win` 9 873 212 0 1538 1187 631 1536 864 1807001
+~ Move `main_dlg_cur` `proe_win` 9 863 211 0 1538 1187 631 1536 864 1807096
+~ Move `main_dlg_cur` `proe_win` 9 862 211 0 514 1187 631 1536 864 1807492
+~ Move `main_dlg_cur` `proe_win` 9 862 212 0 1026 1187 631 1536 864 1807579
+~ Move `main_dlg_cur` `proe_win` 9 862 213 0 1026 1187 631 1536 864 1807684
+~ Move `main_dlg_cur` `proe_win` 9 862 214 0 1026 1187 631 1536 864 1807772
+~ Move `main_dlg_cur` `proe_win` 9 861 215 0 1538 1187 631 1536 864 1807865
+~ Move `main_dlg_cur` `proe_win` 9 860 215 0 514 1187 631 1536 864 1807961
+~ Move `main_dlg_cur` `proe_win` 9 860 216 0 1026 1187 631 1536 864 1808412
+~ Move `main_dlg_cur` `proe_win` 9 855 220 0 1538 1187 631 1536 864 1808513
+~ Move `main_dlg_cur` `proe_win` 9 851 223 0 1538 1187 631 1536 864 1808600
+~ Move `main_dlg_cur` `proe_win` 9 843 227 0 1538 1187 631 1536 864 1808686
+~ Move `main_dlg_cur` `proe_win` 9 823 231 0 1538 1187 631 1536 864 1808773
+~ Move `main_dlg_cur` `proe_win` 9 812 233 0 1538 1187 631 1536 864 1808858
+~ Move `main_dlg_cur` `proe_win` 9 811 232 0 1538 1187 631 1536 864 1808945
+~ MButtonDisarm `main_dlg_cur` `proe_win` 9 811 232 0 0 1187 631 1536 864 1809031
+~ MButtonArm `main_dlg_cur` `proe_win` 9 1127 150 0 2 1187 631 1536 864 1809302
+~ Move `main_dlg_cur` `proe_win` 9 1128 149 0 1538 1187 631 1536 864 1809340
+~ Move `main_dlg_cur` `proe_win` 9 1128 148 0 1026 1187 631 1536 864 1809347
+~ Move `main_dlg_cur` `proe_win` 9 1129 147 0 1538 1187 631 1536 864 1809364
+~ Move `main_dlg_cur` `proe_win` 9 1130 146 0 1538 1187 631 1536 864 1809371
+~ Move `main_dlg_cur` `proe_win` 9 1132 146 0 514 1187 631 1536 864 1809380
+~ Move `main_dlg_cur` `proe_win` 9 1136 144 0 1538 1187 631 1536 864 1809401
+~ Move `main_dlg_cur` `proe_win` 9 1150 140 0 1538 1187 631 1536 864 1809497
+~ Move `main_dlg_cur` `proe_win` 9 1168 140 0 514 1187 631 1536 864 1809592
+~ Move `main_dlg_cur` `proe_win` 9 1170 139 0 1538 1187 631 1536 864 1809683
+~ Move `main_dlg_cur` `proe_win` 9 1170 140 0 1026 1187 631 1536 864 1809778
+~ MButtonDisarm `main_dlg_cur` `proe_win` 9 1170 140 0 0 1187 631 1536 864 1809875
+~ MButtonArm `main_dlg_cur` `proe_win` 9 989 130 0 2 1187 631 1536 864 1809997
+~ Move `main_dlg_cur` `proe_win` 9 988 130 0 514 1187 631 1536 864 1810027
+~ Move `main_dlg_cur` `proe_win` 9 989 130 0 514 1187 631 1536 864 1810035
+~ Move `main_dlg_cur` `proe_win` 9 988 130 0 514 1187 631 1536 864 1810044
+~ Move `main_dlg_cur` `proe_win` 9 989 131 0 1538 1187 631 1536 864 1810052
+~ Move `main_dlg_cur` `proe_win` 9 990 131 0 514 1187 631 1536 864 1810059
+~ Move `main_dlg_cur` `proe_win` 9 991 131 0 514 1187 631 1536 864 1810067
+~ Move `main_dlg_cur` `proe_win` 9 992 132 0 1538 1187 631 1536 864 1810076
+~ Move `main_dlg_cur` `proe_win` 9 995 132 0 514 1187 631 1536 864 1810084
+~ Move `main_dlg_cur` `proe_win` 9 999 132 0 514 1187 631 1536 864 1810108
+~ Move `main_dlg_cur` `proe_win` 9 1023 132 0 514 1187 631 1536 864 1810194
+~ Move `main_dlg_cur` `proe_win` 9 1026 130 0 1538 1187 631 1536 864 1810279
+~ Move `main_dlg_cur` `proe_win` 9 1027 129 0 1538 1187 631 1536 864 1810372
+~ Move `main_dlg_cur` `proe_win` 9 1030 128 0 1538 1187 631 1536 864 1810456
+~ Move `main_dlg_cur` `proe_win` 9 1033 125 0 1538 1187 631 1536 864 1810541
+~ Move `main_dlg_cur` `proe_win` 9 1033 124 0 1026 1187 631 1536 864 1810632
+~ Move `main_dlg_cur` `proe_win` 9 1033 121 0 1026 1187 631 1536 864 1810733
+~ Move `main_dlg_cur` `proe_win` 9 1028 116 0 1538 1187 631 1536 864 1810834
+~ Move `main_dlg_cur` `proe_win` 9 1027 116 0 514 1187 631 1536 864 1810927
+~ Move `main_dlg_cur` `proe_win` 9 1026 115 0 1538 1187 631 1536 864 1811076
+~ Move `main_dlg_cur` `proe_win` 9 1023 113 0 1538 1187 631 1536 864 1811163
+~ MButtonDisarm `main_dlg_cur` `proe_win` 9 1023 113 0 0 1187 631 1536 864 1811254
+~ MButtonArm `main_dlg_cur` `proe_win` 9 1018 113 0 2 1187 631 1536 864 1811349
+~ Move `main_dlg_cur` `proe_win` 9 1016 113 0 514 1187 631 1536 864 1811355
+~ Move `main_dlg_cur` `proe_win` 9 1015 113 0 514 1187 631 1536 864 1811363
+~ Move `main_dlg_cur` `proe_win` 9 1013 113 0 514 1187 631 1536 864 1811371
+~ Move `main_dlg_cur` `proe_win` 9 1008 113 0 514 1187 631 1536 864 1811393
+~ Move `main_dlg_cur` `proe_win` 9 1004 113 0 514 1187 631 1536 864 1811478
+~ Move `main_dlg_cur` `proe_win` 9 1002 113 0 514 1187 631 1536 864 1811739
+~ Move `main_dlg_cur` `proe_win` 9 997 116 0 1538 1187 631 1536 864 1811825
+~ Move `main_dlg_cur` `proe_win` 9 993 119 0 1538 1187 631 1536 864 1811909
+~ Move `main_dlg_cur` `proe_win` 9 984 122 0 1538 1187 631 1536 864 1812004
+~ Move `main_dlg_cur` `proe_win` 9 967 127 0 1538 1187 631 1536 864 1812095
+~ Move `main_dlg_cur` `proe_win` 9 961 130 0 1538 1187 631 1536 864 1812183
+~ MButtonDisarm `main_dlg_cur` `proe_win` 9 961 130 0 0 1187 631 1536 864 1812411
+~ Wheel `main_dlg_cur` `proe_win` 9 998 121 393216 0 1187 631 1536 864 1812908
+~ Wheel `main_dlg_cur` `proe_win` 9 998 121 393216 0 1187 631 1536 864 1812968
+~ Move `main_dlg_cur` `proe_win` 9 1029 114 16777216 512 1187 631 1536 864 1813810
+>M Chain_oa_sel_CB ProeWin0 1029 114 40 10000 1187 0 0 631 1536 0 0 864 13
+>M Collectors_CB ProeWin0 1029 114 40 10000 1187 0 0 631 1536 0 0 864 13
+~ MButtonArm `main_dlg_cur` `proe_win` 9 1030 117 16777216 2 1187 631 1536 864 1813903
+~ Move `main_dlg_cur` `proe_win` 9 1029 118 16777216 1538 1187 631 1536 864 1813908
+~ Move `main_dlg_cur` `proe_win` 9 1028 120 16777216 1538 1187 631 1536 864 1813916
+~ Move `main_dlg_cur` `proe_win` 9 1026 122 16777216 1538 1187 631 1536 864 1813924
+~ Move `main_dlg_cur` `proe_win` 9 1018 127 16777216 1538 1187 631 1536 864 1813947
+~ Move `main_dlg_cur` `proe_win` 9 1006 133 16777216 1538 1187 631 1536 864 1813959
+~ Move `main_dlg_cur` `proe_win` 9 999 136 16777216 1538 1187 631 1536 864 1813971
+~ Move `main_dlg_cur` `proe_win` 9 979 144 16777216 1538 1187 631 1536 864 1813982
+~ Move `main_dlg_cur` `proe_win` 9 960 150 16777216 1538 1187 631 1536 864 1813996
+~ Move `main_dlg_cur` `proe_win` 9 938 155 16777216 1538 1187 631 1536 864 1814013
+~ Move `main_dlg_cur` `proe_win` 9 915 159 16777216 1538 1187 631 1536 864 1814028
+~ Move `main_dlg_cur` `proe_win` 9 904 161 16777216 1538 1187 631 1536 864 1814043
+~ Move `main_dlg_cur` `proe_win` 9 885 165 16777216 1538 1187 631 1536 864 1814059
+~ Move `main_dlg_cur` `proe_win` 9 869 168 16777216 1538 1187 631 1536 864 1814074
+~ Move `main_dlg_cur` `proe_win` 9 854 170 16777216 1538 1187 631 1536 864 1814089
+~ Move `main_dlg_cur` `proe_win` 9 843 171 16777216 1538 1187 631 1536 864 1814101
+~ Move `main_dlg_cur` `proe_win` 9 838 172 16777216 1538 1187 631 1536 864 1814112
+~ Move `main_dlg_cur` `proe_win` 9 833 173 16777216 1538 1187 631 1536 864 1814123
+~ Move `main_dlg_cur` `proe_win` 9 827 174 16777216 1538 1187 631 1536 864 1814135
+~ Move `main_dlg_cur` `proe_win` 9 825 175 16777216 1538 1187 631 1536 864 1814146
+~ Move `main_dlg_cur` `proe_win` 9 815 177 16777216 1538 1187 631 1536 864 1814165
+~ Move `main_dlg_cur` `proe_win` 9 807 178 16777216 1538 1187 631 1536 864 1814183
+~ Move `main_dlg_cur` `proe_win` 9 802 179 16777216 1538 1187 631 1536 864 1814194
+~ Move `main_dlg_cur` `proe_win` 9 794 179 16777216 514 1187 631 1536 864 1814205
+~ Move `main_dlg_cur` `proe_win` 9 791 180 16777216 1538 1187 631 1536 864 1814217
+~ Move `main_dlg_cur` `proe_win` 9 786 182 16777216 1538 1187 631 1536 864 1814230
+~ Move `main_dlg_cur` `proe_win` 9 783 182 16777216 514 1187 631 1536 864 1814242
+~ Move `main_dlg_cur` `proe_win` 9 779 183 16777216 1538 1187 631 1536 864 1814254
+~ Move `main_dlg_cur` `proe_win` 9 777 184 16777216 1538 1187 631 1536 864 1814266
+~ Move `main_dlg_cur` `proe_win` 9 774 185 16777216 1538 1187 631 1536 864 1814277
+~ MButtonDisarm `main_dlg_cur` `proe_win` 9 774 185 16777216 0 1187 631 1536 864 1814324
+~ Move `main_dlg_cur` `proe_win` 9 777 182 0 0 1187 631 1536 864 1814437
+>M Chain_oa_sel_CB ProeWin0 777 182 c0 0 1187 0 0 631 1536 0 0 864 13
+>M Collectors_CB ProeWin0 777 182 c0 0 1187 0 0 631 1536 0 0 864 13
+~ Wheel `main_dlg_cur` `proe_win` 9 778 180 458752 0 1187 631 1536 864 1814628
+~ Wheel `main_dlg_cur` `proe_win` 9 778 180 458752 0 1187 631 1536 864 1814688
+~ Wheel `main_dlg_cur` `proe_win` 9 780 179 458752 512 1187 631 1536 864 1814760
+~ Wheel `main_dlg_cur` `proe_win` 9 781 175 458752 1536 1187 631 1536 864 1814823
+~ MButtonArm `main_dlg_cur` `proe_win` 9 804 156 0 1538 1187 631 1536 864 1815172
+~ Move `main_dlg_cur` `proe_win` 9 805 155 0 1538 1187 631 1536 864 1815180
+~ Move `main_dlg_cur` `proe_win` 9 806 154 0 1538 1187 631 1536 864 1815187
+~ Move `main_dlg_cur` `proe_win` 9 808 154 0 514 1187 631 1536 864 1815203
+~ Move `main_dlg_cur` `proe_win` 9 808 153 0 1026 1187 631 1536 864 1815211
+~ Move `main_dlg_cur` `proe_win` 9 809 153 0 514 1187 631 1536 864 1815219
+~ Move `main_dlg_cur` `proe_win` 9 809 152 0 1026 1187 631 1536 864 1815244
+~ Move `main_dlg_cur` `proe_win` 9 816 150 0 1538 1187 631 1536 864 1815336
+~ Move `main_dlg_cur` `proe_win` 9 823 145 0 1538 1187 631 1536 864 1815439
+~ Move `main_dlg_cur` `proe_win` 9 828 143 0 1538 1187 631 1536 864 1815535
+~ Move `main_dlg_cur` `proe_win` 9 829 142 0 1538 1187 631 1536 864 1815629
+~ Move `main_dlg_cur` `proe_win` 9 830 142 0 514 1187 631 1536 864 1815820
+~ Move `main_dlg_cur` `proe_win` 9 830 145 0 1026 1187 631 1536 864 1815908
+~ Move `main_dlg_cur` `proe_win` 9 825 151 0 1538 1187 631 1536 864 1815996
+~ Move `main_dlg_cur` `proe_win` 9 819 156 0 1538 1187 631 1536 864 1816082
+~ Move `main_dlg_cur` `proe_win` 9 813 159 0 1538 1187 631 1536 864 1816188
+~ Move `main_dlg_cur` `proe_win` 9 812 159 0 514 1187 631 1536 864 1816289
+~ MButtonDisarm `main_dlg_cur` `proe_win` 9 812 159 0 0 1187 631 1536 864 1816388
+~ MButtonArm `main_dlg_cur` `proe_win` 9 1023 87 0 514 1187 631 1536 864 1816644
+~ Move `main_dlg_cur` `proe_win` 9 1024 87 0 514 1187 631 1536 864 1816683
+~ Move `main_dlg_cur` `proe_win` 9 1024 87 0 2 1187 631 1536 864 1816691
+~ Move `main_dlg_cur` `proe_win` 9 1024 88 0 1026 1187 631 1536 864 1816699
+~ Move `main_dlg_cur` `proe_win` 9 1024 90 0 1026 1187 631 1536 864 1816715
+~ Move `main_dlg_cur` `proe_win` 9 1024 91 0 1026 1187 631 1536 864 1816723
+~ Move `main_dlg_cur` `proe_win` 9 1023 92 0 1538 1187 631 1536 864 1816731
+~ Move `main_dlg_cur` `proe_win` 9 1021 96 0 1538 1187 631 1536 864 1816756
+~ Move `main_dlg_cur` `proe_win` 9 1019 102 0 1538 1187 631 1536 864 1816844
+~ Move `main_dlg_cur` `proe_win` 9 1020 101 0 1538 1187 631 1536 864 1816947
+~ MButtonDisarm `main_dlg_cur` `proe_win` 9 1020 101 0 0 1187 631 1536 864 1817059
+~ MButtonArm `main_dlg_cur` `proe_win` 9 1020 101 0 2 1187 631 1536 864 1817154
+~ Move `main_dlg_cur` `proe_win` 9 1019 101 0 514 1187 631 1536 864 1817156
+~ Move `main_dlg_cur` `proe_win` 9 1019 100 0 1026 1187 631 1536 864 1817164
+~ Move `main_dlg_cur` `proe_win` 9 1019 99 0 1026 1187 631 1536 864 1817172
+~ Move `main_dlg_cur` `proe_win` 9 1018 98 0 1538 1187 631 1536 864 1817179
+~ Move `main_dlg_cur` `proe_win` 9 1018 97 0 1026 1187 631 1536 864 1817188
+~ Move `main_dlg_cur` `proe_win` 9 1018 95 0 1026 1187 631 1536 864 1817196
+~ Move `main_dlg_cur` `proe_win` 9 1017 91 0 1538 1187 631 1536 864 1817221
+~ Move `main_dlg_cur` `proe_win` 9 1017 87 0 1026 1187 631 1536 864 1817310
+~ Move `main_dlg_cur` `proe_win` 9 1017 84 0 1026 1187 631 1536 864 1817398
+~ Move `main_dlg_cur` `proe_win` 9 1017 81 0 1026 1187 631 1536 864 1817486
+~ MButtonDisarm `main_dlg_cur` `proe_win` 9 1017 81 0 0 1187 631 1536 864 1817584
+~ Wheel `main_dlg_cur` `proe_win` 9 944 140 393216 512 1187 631 1536 864 1817997
+~ Wheel `main_dlg_cur` `proe_win` 9 936 140 393216 512 1187 631 1536 864 1818058
+~ Move `main_dlg_cur` `proe_win` 9 944 107 16777216 0 1187 631 1536 864 1818564
+>M Chain_oa_sel_CB ProeWin0 944 107 c0 10000 1187 0 0 631 1536 0 0 864 13
+>M Collectors_CB ProeWin0 944 107 c0 10000 1187 0 0 631 1536 0 0 864 13
+~ MButtonArm `main_dlg_cur` `proe_win` 9 953 96 16777216 2 1187 631 1536 864 1818669
+~ Move `main_dlg_cur` `proe_win` 9 955 95 16777216 1538 1187 631 1536 864 1818685
+~ Move `main_dlg_cur` `proe_win` 9 954 96 16777216 1538 1187 631 1536 864 1818691
+~ Move `main_dlg_cur` `proe_win` 9 955 96 16777216 514 1187 631 1536 864 1818700
+~ Move `main_dlg_cur` `proe_win` 9 955 99 16777216 1026 1187 631 1536 864 1818707
+~ Move `main_dlg_cur` `proe_win` 9 954 101 16777216 1538 1187 631 1536 864 1818716
+~ Move `main_dlg_cur` `proe_win` 9 952 114 16777216 1538 1187 631 1536 864 1818739
+~ Move `main_dlg_cur` `proe_win` 9 950 120 16777216 1538 1187 631 1536 864 1818751
+~ Move `main_dlg_cur` `proe_win` 9 947 131 16777216 1538 1187 631 1536 864 1818764
+~ Move `main_dlg_cur` `proe_win` 9 946 137 16777216 1538 1187 631 1536 864 1818777
+~ Move `main_dlg_cur` `proe_win` 9 944 147 16777216 1538 1187 631 1536 864 1818789
+~ Move `main_dlg_cur` `proe_win` 9 943 151 16777216 1538 1187 631 1536 864 1818802
+~ Move `main_dlg_cur` `proe_win` 9 939 160 16777216 1538 1187 631 1536 864 1818816
+~ Move `main_dlg_cur` `proe_win` 9 936 172 16777216 1538 1187 631 1536 864 1818828
+~ Move `main_dlg_cur` `proe_win` 9 933 178 16777216 1538 1187 631 1536 864 1818841
+~ Move `main_dlg_cur` `proe_win` 9 927 188 16777216 1538 1187 631 1536 864 1818853
+~ Move `main_dlg_cur` `proe_win` 9 921 194 16777216 1538 1187 631 1536 864 1818866
+~ Move `main_dlg_cur` `proe_win` 9 904 209 16777216 1538 1187 631 1536 864 1818879
+~ Move `main_dlg_cur` `proe_win` 9 894 215 16777216 1538 1187 631 1536 864 1818892
+~ Move `main_dlg_cur` `proe_win` 9 872 227 16777216 1538 1187 631 1536 864 1818904
+~ Move `main_dlg_cur` `proe_win` 9 852 236 16777216 1538 1187 631 1536 864 1818916
+~ Move `main_dlg_cur` `proe_win` 9 843 239 16777216 1538 1187 631 1536 864 1818929
+~ Move `main_dlg_cur` `proe_win` 9 831 243 16777216 1538 1187 631 1536 864 1818941
+~ Move `main_dlg_cur` `proe_win` 9 828 244 16777216 1538 1187 631 1536 864 1818954
+~ Move `main_dlg_cur` `proe_win` 9 826 245 16777216 1538 1187 631 1536 864 1818967
+~ MButtonDisarm `main_dlg_cur` `proe_win` 9 826 245 16777216 0 1187 631 1536 864 1818996
+~ Move `main_dlg_cur` `proe_win` 9 826 245 0 0 1187 631 1536 864 1819069
+>M Chain_oa_sel_CB ProeWin0 826 245 c0 0 1187 0 0 631 1536 0 0 864 13
+>M Collectors_CB ProeWin0 826 245 c0 0 1187 0 0 631 1536 0 0 864 13
+~ MButtonArm `main_dlg_cur` `proe_win` 9 825 246 0 2 1187 631 1536 864 1819262
+~ Move `main_dlg_cur` `proe_win` 9 826 247 0 1538 1187 631 1536 864 1819276
+~ Move `main_dlg_cur` `proe_win` 9 826 247 0 2 1187 631 1536 864 1819292
+~ Move `main_dlg_cur` `proe_win` 9 827 247 0 514 1187 631 1536 864 1819299
+~ Move `main_dlg_cur` `proe_win` 9 828 247 0 514 1187 631 1536 864 1819307
+~ Move `main_dlg_cur` `proe_win` 9 828 246 0 1026 1187 631 1536 864 1819315
+~ Move `main_dlg_cur` `proe_win` 9 829 246 0 514 1187 631 1536 864 1819324
+~ Move `main_dlg_cur` `proe_win` 9 830 245 0 1538 1187 631 1536 864 1819340
+~ Move `main_dlg_cur` `proe_win` 9 833 244 0 1538 1187 631 1536 864 1819362
+~ Move `main_dlg_cur` `proe_win` 9 845 241 0 1538 1187 631 1536 864 1819448
+~ Move `main_dlg_cur` `proe_win` 9 852 239 0 1538 1187 631 1536 864 1819549
+~ Move `main_dlg_cur` `proe_win` 9 855 238 0 1538 1187 631 1536 864 1819645
+~ Move `main_dlg_cur` `proe_win` 9 856 238 0 514 1187 631 1536 864 1819764
+~ Move `main_dlg_cur` `proe_win` 9 851 245 0 1538 1187 631 1536 864 1819852
+~ Move `main_dlg_cur` `proe_win` 9 842 248 0 1538 1187 631 1536 864 1819941
+~ Move `main_dlg_cur` `proe_win` 9 833 253 0 1538 1187 631 1536 864 1820029
+~ Move `main_dlg_cur` `proe_win` 9 828 254 0 1538 1187 631 1536 864 1820114
+~ Move `main_dlg_cur` `proe_win` 9 825 254 0 514 1187 631 1536 864 1820200
+~ MButtonDisarm `main_dlg_cur` `proe_win` 9 825 254 0 0 1187 631 1536 864 1820289
+~ MButtonArm `main_dlg_cur` `proe_win` 9 905 232 0 2 1187 631 1536 864 1820509
+~ Move `main_dlg_cur` `proe_win` 9 905 231 0 1026 1187 631 1536 864 1820563
+~ Move `main_dlg_cur` `proe_win` 9 906 232 0 1538 1187 631 1536 864 1820579
+~ Move `main_dlg_cur` `proe_win` 9 906 233 0 1026 1187 631 1536 864 1820588
+~ Move `main_dlg_cur` `proe_win` 9 906 234 0 1026 1187 631 1536 864 1820604
+~ Move `main_dlg_cur` `proe_win` 9 906 235 0 1026 1187 631 1536 864 1820620
+~ Move `main_dlg_cur` `proe_win` 9 906 236 0 1026 1187 631 1536 864 1820628
+~ Move `main_dlg_cur` `proe_win` 9 906 237 0 1026 1187 631 1536 864 1820635
+~ Move `main_dlg_cur` `proe_win` 9 906 239 0 1026 1187 631 1536 864 1820657
+~ Move `main_dlg_cur` `proe_win` 9 906 246 0 1026 1187 631 1536 864 1820743
+~ Move `main_dlg_cur` `proe_win` 9 905 248 0 1538 1187 631 1536 864 1820829
+~ Move `main_dlg_cur` `proe_win` 9 905 249 0 1026 1187 631 1536 864 1820923
+~ Move `main_dlg_cur` `proe_win` 9 905 248 0 1026 1187 631 1536 864 1821083
+~ Move `main_dlg_cur` `proe_win` 9 911 240 0 1538 1187 631 1536 864 1821181
+~ Move `main_dlg_cur` `proe_win` 9 912 236 0 1538 1187 631 1536 864 1821281
+~ Move `main_dlg_cur` `proe_win` 9 912 233 0 1026 1187 631 1536 864 1821369
+~ Move `main_dlg_cur` `proe_win` 9 913 230 0 1538 1187 631 1536 864 1821455
+~ Move `main_dlg_cur` `proe_win` 9 915 226 0 1538 1187 631 1536 864 1821541
+~ Move `main_dlg_cur` `proe_win` 9 916 222 0 1538 1187 631 1536 864 1821628
+~ Move `main_dlg_cur` `proe_win` 9 920 219 0 1538 1187 631 1536 864 1821726
+~ Move `main_dlg_cur` `proe_win` 9 924 217 0 1538 1187 631 1536 864 1821823
+~ Move `main_dlg_cur` `proe_win` 9 923 217 0 514 1187 631 1536 864 1822307
+~ Move `main_dlg_cur` `proe_win` 9 920 218 0 1538 1187 631 1536 864 1822398
+~ Move `main_dlg_cur` `proe_win` 9 918 219 0 1538 1187 631 1536 864 1822497
+~ Move `main_dlg_cur` `proe_win` 9 914 221 0 1538 1187 631 1536 864 1822594
+~ Move `main_dlg_cur` `proe_win` 9 911 222 0 1538 1187 631 1536 864 1822692
+~ Move `main_dlg_cur` `proe_win` 9 908 223 0 1538 1187 631 1536 864 1822779
+~ Move `main_dlg_cur` `proe_win` 9 907 223 0 514 1187 631 1536 864 1822947
+~ Move `main_dlg_cur` `proe_win` 9 907 221 0 1026 1187 631 1536 864 1823043
+~ Move `main_dlg_cur` `proe_win` 9 910 217 0 1538 1187 631 1536 864 1823134
+~ Move `main_dlg_cur` `proe_win` 9 911 217 0 514 1187 631 1536 864 1823259
+~ Move `main_dlg_cur` `proe_win` 9 912 217 0 514 1187 631 1536 864 1823345
+~ MButtonDisarm `main_dlg_cur` `proe_win` 9 912 217 0 0 1187 631 1536 864 1823436
+~ Move `main_dlg_cur` `proe_win` 9 787 259 16777216 0 1187 631 1536 864 1823876
+>M Chain_oa_sel_CB ProeWin0 787 259 c0 10000 1187 0 0 631 1536 0 0 864 13
+>M Collectors_CB ProeWin0 787 259 c0 10000 1187 0 0 631 1536 0 0 864 13
+~ MButtonArm `main_dlg_cur` `proe_win` 9 773 266 16777216 2 1187 631 1536 864 1824013
+~ Move `main_dlg_cur` `proe_win` 9 772 267 16777216 1538 1187 631 1536 864 1824028
+~ Move `main_dlg_cur` `proe_win` 9 772 268 16777216 1026 1187 631 1536 864 1824051
+~ Move `main_dlg_cur` `proe_win` 9 772 269 16777216 1026 1187 631 1536 864 1824068
+~ Move `main_dlg_cur` `proe_win` 9 773 269 16777216 514 1187 631 1536 864 1824076
+~ Move `main_dlg_cur` `proe_win` 9 774 269 16777216 514 1187 631 1536 864 1824091
+~ Move `main_dlg_cur` `proe_win` 9 775 269 16777216 514 1187 631 1536 864 1824099
+~ Move `main_dlg_cur` `proe_win` 9 776 269 16777216 514 1187 631 1536 864 1824107
+~ Move `main_dlg_cur` `proe_win` 9 777 269 16777216 514 1187 631 1536 864 1824115
+~ Move `main_dlg_cur` `proe_win` 9 779 269 16777216 514 1187 631 1536 864 1824123
+~ Move `main_dlg_cur` `proe_win` 9 782 269 16777216 514 1187 631 1536 864 1824145
+~ Move `main_dlg_cur` `proe_win` 9 786 269 16777216 514 1187 631 1536 864 1824157
+~ Move `main_dlg_cur` `proe_win` 9 791 268 16777216 1538 1187 631 1536 864 1824170
+~ Move `main_dlg_cur` `proe_win` 9 798 268 16777216 514 1187 631 1536 864 1824183
+~ Move `main_dlg_cur` `proe_win` 9 804 267 16777216 1538 1187 631 1536 864 1824196
+~ Move `main_dlg_cur` `proe_win` 9 808 266 16777216 1538 1187 631 1536 864 1824208
+~ Move `main_dlg_cur` `proe_win` 9 815 266 16777216 514 1187 631 1536 864 1824221
+~ Move `main_dlg_cur` `proe_win` 9 818 266 16777216 514 1187 631 1536 864 1824233
+~ Move `main_dlg_cur` `proe_win` 9 826 264 16777216 1538 1187 631 1536 864 1824246
+~ Move `main_dlg_cur` `proe_win` 9 829 263 16777216 1538 1187 631 1536 864 1824259
+~ Move `main_dlg_cur` `proe_win` 9 834 263 16777216 514 1187 631 1536 864 1824271
+~ Move `main_dlg_cur` `proe_win` 9 835 263 16777216 514 1187 631 1536 864 1824284
+~ Move `main_dlg_cur` `proe_win` 9 836 263 16777216 514 1187 631 1536 864 1824379
+~ MButtonDisarm `main_dlg_cur` `proe_win` 9 836 263 16777216 0 1187 631 1536 864 1824460
+~ Move `main_dlg_cur` `proe_win` 9 836 263 0 0 1187 631 1536 864 1824527
+>M Chain_oa_sel_CB ProeWin0 836 263 c0 0 1187 0 0 631 1536 0 0 864 13
+>M Collectors_CB ProeWin0 836 263 c0 0 1187 0 0 631 1536 0 0 864 13
+~ MButtonArm `main_dlg_cur` `proe_win` 9 812 250 0 2 1187 631 1536 864 1824774
+~ Move `main_dlg_cur` `proe_win` 9 811 249 0 1538 1187 631 1536 864 1824780
+~ Move `main_dlg_cur` `proe_win` 9 809 249 0 514 1187 631 1536 864 1824788
+~ Move `main_dlg_cur` `proe_win` 9 808 249 0 514 1187 631 1536 864 1824796
+~ Move `main_dlg_cur` `proe_win` 9 807 248 0 1538 1187 631 1536 864 1824803
+~ Move `main_dlg_cur` `proe_win` 9 804 248 0 514 1187 631 1536 864 1824826
+~ Move `main_dlg_cur` `proe_win` 9 792 249 0 1538 1187 631 1536 864 1824911
+~ Move `main_dlg_cur` `proe_win` 9 791 250 0 1538 1187 631 1536 864 1824997
+~ Move `main_dlg_cur` `proe_win` 9 791 251 0 1026 1187 631 1536 864 1825219
+~ Move `main_dlg_cur` `proe_win` 9 792 254 0 1538 1187 631 1536 864 1825308
+~ Move `main_dlg_cur` `proe_win` 9 794 258 0 1538 1187 631 1536 864 1825397
+~ Move `main_dlg_cur` `proe_win` 9 796 259 0 1538 1187 631 1536 864 1825484
+~ Move `main_dlg_cur` `proe_win` 9 799 261 0 1538 1187 631 1536 864 1825569
+~ Move `main_dlg_cur` `proe_win` 9 805 263 0 1538 1187 631 1536 864 1825657
+~ Move `main_dlg_cur` `proe_win` 9 812 264 0 1538 1187 631 1536 864 1825742
+~ Move `main_dlg_cur` `proe_win` 9 816 264 0 514 1187 631 1536 864 1825835
+~ Move `main_dlg_cur` `proe_win` 9 819 264 0 514 1187 631 1536 864 1825926
+~ Move `main_dlg_cur` `proe_win` 9 820 263 0 1538 1187 631 1536 864 1826018
+~ Move `main_dlg_cur` `proe_win` 9 821 263 0 514 1187 631 1536 864 1826180
+~ Move `main_dlg_cur` `proe_win` 9 823 262 0 1538 1187 631 1536 864 1826264
+~ Move `main_dlg_cur` `proe_win` 9 824 262 0 514 1187 631 1536 864 1826348
+~ Move `main_dlg_cur` `proe_win` 9 825 262 0 514 1187 631 1536 864 1826811
+~ Move `main_dlg_cur` `proe_win` 9 827 260 0 1538 1187 631 1536 864 1826896
+~ Move `main_dlg_cur` `proe_win` 9 828 260 0 514 1187 631 1536 864 1826995
+~ Move `main_dlg_cur` `proe_win` 9 830 260 0 514 1187 631 1536 864 1827080
+~ Move `main_dlg_cur` `proe_win` 9 830 259 0 1026 1187 631 1536 864 1827169
+~ Move `main_dlg_cur` `proe_win` 9 832 258 0 1538 1187 631 1536 864 1827267
+~ Move `main_dlg_cur` `proe_win` 9 832 256 0 1026 1187 631 1536 864 1827359
+~ Move `main_dlg_cur` `proe_win` 9 833 254 0 1538 1187 631 1536 864 1827448
+~ MButtonDisarm `main_dlg_cur` `proe_win` 9 833 254 0 0 1187 631 1536 864 1828059
+~ Close `main_dlg_cur` `appl_casc`
+~ Command `ProCmdModelSaveAs` 
+~ Select `file_saveas` `ph_list.Filelist` 1 `pdf_3d`
