--- a/trail.txt.3
+++ b/trail.txt.3
@@ -25628,3 +25628,16 @@ ll_check` 0
 ~ Activate `intf_pdf` `pdf_btn_ok`
 < 2 0.800000 1000 0 0 843 1000 0 0 843 8
 !%CIFichier PDF en cours de création......
+!%CIExécution de la passe 1 sur 2.
+!%CIExécution de la passe 2 sur 2.
+!%CILe fichier PDF a été créé.
+~ Activate `main_dlg_cur` `main_dlg_cur`
+!mem_use INCREASE Blocks 1543242, AppSize 756341647, SysSize 798391040
+~ Close `main_dlg_cur` `main_dlg_cur`
+!Command ProCmdOSExit was pushed from the software.
+! Message Dialog: Warning
+!               : Creo Parametric va se fermer et les tâches non enregistrées seront perdues.
+!               : Voulez-vous vraiment quitter ?
+~ FocusIn `UI Message Dialog` `yes`
+~ Activate `UI Message Dialog` `yes`
+!End of Trail File
